# Blynk-ESP-IDF

./: .gitignore  CMakeLists.txt  README.md  diagram.json  partitions.csv  sdkconfig.defaults  wokwi.toml
components/Blynk/: BlynkEspIDF.cpp  CMakeLists.txt
components/Blynk/blynk-lib/: WidgetTerminal.h
components/Blynk/blynk-lib/Blynk/: BlynkConfig.h  BlynkDateTime.h  BlynkDebug.h  BlynkDetectDevice.h  BlynkProtocol.h
components/Blynk/blynk-lib/utility/: BlynkDebug.cpp
components/Blynk/include/: BlynkApiEsp32.h  BlynkEspIDF.h  BlynkSocketEsp32.h
components/Print/: CMakeLists.txt  Print.cpp
components/Serial/: CMakeLists.txt  Serial.cpp
components/Serial/include/: Serial.h
components/Stream/: CMakeLists.txt  Stream.cpp
components/StreamString/: CMakeLists.txt  StreamString.cpp
components/StreamString/include/: StreamString.h
components/WString/: CMakeLists.txt  WString.cpp
components/WString/include/: WString.h
main/: CMakeLists.txt  idf_component.yml  main.cpp  wifi_connect.c  wifi_connect.h
